# qa-indexv2

./: main.py  pyproject.toml
app/: index.py
app/celery/: celery.py  tasks.py
test/: test_index.py
